.work/must-gather-analysis/registry-build11-ci-openshift-org-ci-ln-vjb5l1t-stable-sha256-f89169f1cf6fd47be50038cc1c80be38e4fb997d7805094b3f6e50034f9c4c20/namespaces/openshift-cluster-olm-operator/networking.k8s.io/networkpolicies.yaml
---
apiVersion: networking.k8s.io/v1
items:
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      capability.openshift.io/name: OperatorLifecycleManagerV1
      include.release.openshift.io/self-managed-high-availability: "true"
    creationTimestamp: "2026-01-28T09:31:37Z"
    generation: 1
    managedFields:
    - apiVersion: networking.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:capability.openshift.io/name: {}
            f:include.release.openshift.io/self-managed-high-availability: {}
          f:ownerReferences:
            .: {}
            k:{"uid":"0370d296-6904-481d-ab90-157c7e5b835a"}: {}
        f:spec:
          f:egress: {}
          f:podSelector: {}
          f:policyTypes: {}
      manager: cluster-version-operator
      operation: Update
      time: "2026-01-28T09:31:37Z"
    name: allow-egress-to-api-server
    namespace: openshift-cluster-olm-operator
    ownerReferences:
    - apiVersion: config.openshift.io/v1
      controller: true
      kind: ClusterVersion
      name: version
      uid: 0370d296-6904-481d-ab90-157c7e5b835a
    resourceVersion: "9374"
    uid: e27cb3e6-f4e7-4a28-b252-542f92b26816
  spec:
    egress:
    - ports:
      - port: 6443
        protocol: TCP
    podSelector:
      matchLabels:
        name: cluster-olm-operator
    policyTypes:
    - Egress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      capability.openshift.io/name: OperatorLifecycleManagerV1
      include.release.openshift.io/self-managed-high-availability: "true"
    creationTimestamp: "2026-01-28T09:31:36Z"
    generation: 1
    managedFields:
    - apiVersion: networking.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:capability.openshift.io/name: {}
            f:include.release.openshift.io/self-managed-high-availability: {}
          f:ownerReferences:
            .: {}
            k:{"uid":"0370d296-6904-481d-ab90-157c7e5b835a"}: {}
        f:spec:
          f:egress: {}
          f:podSelector: {}
          f:policyTypes: {}
      manager: cluster-version-operator
      operation: Update
      time: "2026-01-28T09:31:36Z"
    name: allow-egress-to-openshift-dns
    namespace: openshift-cluster-olm-operator
    ownerReferences:
    - apiVersion: config.openshift.io/v1
      controller: true
      kind: ClusterVersion
      name: version
      uid: 0370d296-6904-481d-ab90-157c7e5b835a
    resourceVersion: "9342"
    uid: 9c5874b2-b561-47c5-8f67-7ea29c71cb26
  spec:
    egress:
    - ports:
      - port: dns-tcp
        protocol: TCP
      - port: dns
        protocol: UDP
      to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: openshift-dns
    podSelector:
      matchLabels:
        name: cluster-olm-operator
    policyTypes:
    - Egress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      capability.openshift.io/name: OperatorLifecycleManagerV1
      include.release.openshift.io/self-managed-high-availability: "true"
    creationTimestamp: "2026-01-28T09:31:38Z"
    generation: 1
    managedFields:
    - apiVersion: networking.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:capability.openshift.io/name: {}
            f:include.release.openshift.io/self-managed-high-availability: {}
          f:ownerReferences:
            .: {}
            k:{"uid":"0370d296-6904-481d-ab90-157c7e5b835a"}: {}
        f:spec:
          f:ingress: {}
          f:podSelector: {}
          f:policyTypes: {}
      manager: cluster-version-operator
      operation: Update
      time: "2026-01-28T09:31:38Z"
    name: allow-metrics-traffic
    namespace: openshift-cluster-olm-operator
    ownerReferences:
    - apiVersion: config.openshift.io/v1
      controller: true
      kind: ClusterVersion
      name: version
      uid: 0370d296-6904-481d-ab90-157c7e5b835a
    resourceVersion: "9382"
    uid: 6670cc55-ab8b-489a-b2d3-92c0b9c3de9f
  spec:
    ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            name: openshift-monitoring
      ports:
      - port: 8443
        protocol: TCP
    podSelector:
      matchLabels:
        name: cluster-olm-operator
    policyTypes:
    - Ingress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      capability.openshift.io/name: OperatorLifecycleManagerV1
      include.release.openshift.io/self-managed-high-availability: "true"
    creationTimestamp: "2026-01-28T09:31:35Z"
    generation: 1
    managedFields:
    - apiVersion: networking.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:capability.openshift.io/name: {}
            f:include.release.openshift.io/self-managed-high-availability: {}
          f:ownerReferences:
            .: {}
            k:{"uid":"0370d296-6904-481d-ab90-157c7e5b835a"}: {}
        f:spec:
          f:policyTypes: {}
      manager: cluster-version-operator
      operation: Update
      time: "2026-01-28T09:31:35Z"
    name: default-deny-all
    namespace: openshift-cluster-olm-operator
    ownerReferences:
    - apiVersion: config.openshift.io/v1
      controller: true
      kind: ClusterVersion
      name: version
      uid: 0370d296-6904-481d-ab90-157c7e5b835a
    resourceVersion: "9333"
    uid: 755ca77b-a3df-4f66-ad37-c962c16f4894
  spec:
    podSelector: {}
    policyTypes:
    - Ingress
    - Egress
kind: NetworkPolicyList
metadata:
  resourceVersion: "35159"
